Final edits for hamster publishers

--- a/HamsterPublishers/Code/bookPage.css
+++ b/HamsterPublishers/Code/bookPage.css
@@ -1,6 +1,9 @@
 /*
-Author: Kaiser Slocum
-Date (Last Edited): 12/29/2021
+    Filename: bookPage.css
+    Author: Kaiser Slocum
+    Date (Last Edited): 7/9/2022
+
+   Purpose: The purpose of this program is to give the design for the website
 */
 
 /* Body */
