--- a/WebsiteDev/index.css
+++ b/WebsiteDev/index.css
@@ -9,7 +9,7 @@ body {
 	min-width: 1000px;
     max-width: 1900px;	
 	background-color: black;
-	background-image: url(Background.gif);
+	background-image: url(Background.jpg);
 	background-repeat: no-repeat;
     background-size: cover;
 	font-family: 'Times New Roman';	
@@ -43,10 +43,12 @@ nav {
 }
 nav ul li{  
 	list-style-type: none; 
-	float: left;  	
+	float: left; 
+	clear: left; 	
 	height: 20px;
-	width: 25%;			
+	width: 40%;			
 	text-align: center;
+	margin: 10px;
 }
 nav ul li a{    
     background-color: rgba(57, 175, 230, 0.7);
