--- a/StingerRunRacingWebsite/index.css
+++ b/StingerRunRacingWebsite/index.css
@@ -37,15 +37,18 @@ header {
 
 /* Nav */
 nav {
-	display: block;
-	margin-left: -30px;	
+		display: block;
+		margin-left: -30px;	
+	width: 100%;
+}
+nav ul {
 	width: 100%;
 }
 nav ul li{  
 	list-style-type: none; 
 	float: left;  	
 	height: 20px;
-	width: 25%;			
+	width: 33%;			
 	text-align: center;
 }
 nav ul li a{    
